--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,13 +1,224 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-    <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
-    <title>Todo List</title>
+    <meta charset="utf-8" >
+    <title>Startup 3.1.3 - Project</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="i/favicon.png" type="image/x-icon">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=DM+Sans:100,200,300,400,600,500,700,800,900|DM+Sans:100,200,300,400,500,600,700,800,900&amp;subset=latin" rel="stylesheet">
+    <!-- Bootstrap 4.3.1 CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Slick 1.8.1 jQuery plugin CSS (Sliders) -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <!-- Fancybox 3 jQuery plugin CSS (Open images and video in popup) -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+    <!-- AOS 2.3.4 jQuery plugin CSS (Animations) -->
+    <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
+    <!-- FontAwesome CSS -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <!-- Startup 3 CSS (Styles for all blocks) -->
+    <link th:href="@{/css/style.css}" rel="stylesheet" />
+    <!-- jQuery 3.3.1 -->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
 <body>
-<h1>Todo List</h1>
-<input type="text">
-<input type="text">
-<button>등록</button>
+<!-- Navigation Mobile type 1 -->
+
+<a href="#" class="open_menu bg-light radius_full"><i class="fas fa-bars lh-40"></i></a>
+<div class="navigation_mobile bg-dark type1">
+    <a href="#" class="close_menu color-white"><i class="fas fa-times"></i></a>
+    <div class="px-40 pt-60 pb-60 inner">
+        <div class="logo color-white mb-30">Startup 3</div>
+        <div><a href="#" class="f-heading f-22 link color-white mb-20">Home</a></div>
+        <div><a href="#" class="f-heading f-22 link color-white mb-20">Tour</a></div>
+        <div><a href="#" class="f-heading f-22 link color-white mb-20">Mobile Apps</a></div>
+        <div><a href="#" class="f-heading f-22 link color-white mb-20">Pricing</a></div>
+        <div><a href="#" class="f-heading f-22 link color-white mb-20">Development</a></div>
+        <div><a href="#" class="link color-white op-3 mb-15">Help</a></div>
+        <div><a href="#" class="link color-white op-3 mb-15">F.A.Q.</a></div>
+        <div><a href="#" class="link color-white op-3 mb-15">Support</a></div>
+        <div><a href="#" class="link color-white op-3 mb-15">About Us</a></div>
+        <div><a href="#" class="link color-white op-3 mb-15">Blog</a></div>
+        <div><a href="#" class="link color-white op-3 mb-15">Careers</a></div>
+
+        <div class="socials mt-40">
+            <a href="#" target="_blank" class="link color-white f-18 mr-20"><i class="fab fa-twitter"></i></a>
+            <a href="#" target="_blank" class="link color-white f-18 mr-20"><i class="fab fa-facebook"></i></a>
+            <a href="#" target="_blank" class="link color-white f-18 mr-20"><i class="fab fa-google-plus-g"></i></a>
+        </div>
+
+        <div class="mt-50 f-14 light color-white op-3 copy">&copy; 2020 Designmodo. All rights reserved.</div>
+    </div>
+</div>
+<!-- Header 1 -->
+
+<header class="pt-195 pb-110 bg-light header_1">
+
+    <!-- Header Menu 1 -->
+
+    <nav class="header_menu_1 pt-30 pb-30 mt-30">
+        <div class="container px-xl-0">
+            <div class="row justify-content-center align-items-center f-18 medium">
+                <div class="col-lg-3 logo" data-aos-duration="600" data-aos="fade-down" data-aos-delay="1200">Startup 3</div>
+                <div class="col-lg-6 text-center" data-aos-duration="600" data-aos="fade-down" data-aos-delay="900">
+                    <a href="#" class="link color-heading mx-15">Home</a>
+                    <a href="#" class="link color-heading mx-15">Features</a>
+                    <a href="#" class="link color-heading mx-15">Blog</a>
+                    <a href="#" class="link color-heading mx-15">Shop</a>
+                    <a href="#" class="link color-heading f-16 mx-15"><i class="fas fa-search"></i></a>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 d-flex justify-content-end align-items-center" data-aos-duration="600" data-aos="fade-down" data-aos-delay="1200">
+                    <a href="#" class="mr-20 link color-heading">Sign In</a>
+                    <a href="#" class="btn sm action-1">Sign Up</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+    <div class="container">
+        <div class="mb-3 logo d-block d-xl-none text-center logo_mobile">Startup 3</div>
+        <h1 class="big text-center" data-aos-duration="600" data-aos="fade-down" data-aos-delay="0">Startup Framework</h1>
+        <div class="mw-600 mx-auto mt-30 f-22 color-heading text-center text-adaptive" data-aos-duration="600" data-aos="fade-down" data-aos-delay="300">
+            We made it so beautiful and simple. It combines landings, pages, blogs and shop screens. It is definitely the tool you need in your collection!		</div>
+
+        <div class="mt-80 text-center buttons" data-aos-duration="600" data-aos="fade-down" data-aos-delay="600">
+            <div><a href="#todo_form" class="btn lg action-1">등록</a></div>
+<!--            <div><a href="#" class="mt-15 link action-1 f-18 medium">Learn More</a></div>-->
+        </div>
+    </div>
+</header>
+<!-- Testimonial 1 -->
+
+<section class="pt-80 pb-80 bg-light testimonial_1">
+    <div class="container px-xl-0">
+        <div class="row justify-content-center">
+            <div class="col-xl-10 col-lg-11" data-aos-duration="600" data-aos="fade-down" data-aos-delay="0">
+                <div class="hr bg-gray h-2"></div>
+            </div>
+        </div>
+        <div class="row pt-30 pb-50 inner" data-aos-duration="600" data-aos="fade-down" data-aos-delay="300">
+            <div class="col-xl-2 col-lg-1"></div>
+            <div class="col-md-1 col-sm-2">
+                <i class="fas fa-quote-left f-36 color-gray"></i>
+            </div>
+            <div class="col-xl-7 col-lg-8 col-sm-10">
+                <div class="pt-10 f-22 text-adaptive">
+                    The most important part of the Startup Framework is the
+                    samples. The samples form a set of 25 usable pages you can
+                    use as is or you can add new blocks from UI Kit. 				</div>
+                <div class="mt-20 d-flex align-items-center author_info">
+                    <img src="i/testimonial_1_img.jpg" srcset="i/testimonial_1_img@2x.jpg 2x" class="w-60 h-60 radius_full" alt="" />
+                    <div class="ml-15 color-heading f-14 semibold text-uppercase sp-20">Jessey Kirk, designmodo</div>
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-xl-10 col-lg-11" data-aos-duration="600" data-aos="fade-down" data-aos-delay="0">
+                <div class="hr bg-gray h-2"></div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Form 2 -->
+<section class="bg-light form_2" id="todo_form">
+    <div class="container px-xl-0">
+        <div class="row text-center text-sm-left">
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                <form class="pt-105 pb-100">
+                    <h2 class="mb-45 small" data-aos-duration="600" data-aos="fade-down" data-aos-delay="0">Sign Up to Discover Startup Features</h2>
+                    <div data-aos-duration="600" data-aos="fade-down" data-aos-delay="0">
+                        <div class="mb-10 f-14 semibold text-uppercase sp-20">할 일</div>
+                        <input type="text" name="word" class="mb-25 w-full input lg border-gray focus-action-1 color-heading placeholder-gray text-center text-sm-left"  />
+                    </div>
+                    <div data-aos-duration="600" data-aos="fade-down" data-aos-delay="0">
+                        <div class="mb-10 f-14 semibold text-uppercase sp-20">참조</div>
+                        <input type="text" name="refer" class="mb-25 w-full input lg border-gray focus-action-1 color-heading placeholder-gray text-center text-sm-left"  />
+                    </div>
+                    <div class="mt-25 d-flex flex-wrap align-items-center buttons" data-aos-duration="600" data-aos="fade-down" data-aos-delay="0">
+                        <button id="btn_reg" class="mr-20 mb-20 mb-xl-0 w-210 btn lg action-1">등록</button>
+                    </div>
+                </form>
+            </div>
+            <div class="col-sm-1"></div>
+            <div class="col-lg-6 col-md-5 col-sm-4 d-none d-sm-block" data-aos-duration="600" data-aos="fade-down" data-aos-delay="900">
+                <img src="i/form_2_bg.jpg" srcset="i/form_2_bg@2x.jpg 2x" class="absolute h-full bg" alt="" />
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Footer 1 -->
+
+<footer class="pt-75 pb-65 bg-light text-center footer_1">
+    <div class="container px-xl-0">
+        <div class="row justify-content-between align-items-center lh-40 links">
+            <div class="col-lg-4 col-sm-6 text-sm-right text-lg-left order-1 order-lg-0" data-aos-duration="600" data-aos="fade-down" data-aos-delay="300">
+                <a href="#" class="mr-15 link color-main">About</a>
+                <a href="#" class="mx-15 link color-main">Policy</a>
+                <a href="#" class="mx-15 link color-main">Terms</a>
+            </div>
+            <div class="mb-10 mb-lg-0 col-lg-auto order-0" data-aos-duration="600" data-aos="fade-down" data-aos-delay="0">
+                <a href="#" class="logo link color-main">Startup 3</a>
+            </div>
+            <div class="col-lg-4 col-sm-6 text-sm-left text-lg-right order-2 order-lg-0" data-aos-duration="600" data-aos="fade-down" data-aos-delay="300">
+                <a href="#" class="mr-15 link color-main">Contacts</a>
+                <a href="#" class="mx-15 link color-main"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="mx-15 link color-main"><i class="fab fa-facebook-square"></i></a>
+                <a href="#" class="ml-15 link color-main"><i class="fab fa-google-plus-g"></i></a>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="mt-10 col-xl-4 col-lg-5 col-md-6 col-sm-8" data-aos-duration="600" data-aos="fade-down" data-aos-delay="0">
+                <div class="color-heading text-adaptive">
+                    Be sure to take a look at our <a href="#" class="link color-heading">Terms of Use</a> <br />
+                    and <a href="#" class="link color-heading">Privacy Policy</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+<!-- forms alerts -->
+<div class="alert alert-success alert-dismissible fixed-top alert-form-success" role="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    Thanks for your message!
+</div>
+<div class="alert alert-warning alert-dismissible fixed-top alert-form-check-fields" role="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    Please, fill in required fields.
+</div>
+<div class="alert alert-danger alert-dismissible fixed-top alert-form-error" role="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    An error occurred while sending data :(
+</div>
+
+<!-- Bootstrap 4.3.1 JS -->
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+<!-- Fancybox 3 jQuery plugin JS (Open images and video in popup) -->
+<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+<!-- Google maps JS API -->
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyDP6Ex5S03nvKZJZSvGXsEAi3X_tFkua4U"></script>
+<!-- Slick 1.8.1 jQuery plugin JS (Sliders) -->
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<!-- AOS 2.3.4 jQuery plugin JS (Animations) -->
+<script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+<!-- Maskedinput jQuery plugin JS (Masks for input fields) -->
+<script src="js/jquery.maskedinput.min.js"></script>
+<!-- Startup 3 JS (Custom js for all blocks) -->
+<script src="js/script.js"></script>
+
+<script>
+    $("document").ready(function() {
+        $("#btn_reg").click(function() {
+            alert("hi");
+        });
+
+        function addWork() {
+            alert("아직 준비 중입니다.");
+        };
+    });
+
+</script>
+
 </body>
 </html>
