--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -60,7 +60,7 @@
     <nav class="header_menu_1 pt-30 pb-30 mt-30">
         <div class="container px-xl-0">
             <div class="row justify-content-center align-items-center f-18 medium">
-                <div class="col-lg-3 logo" data-aos-duration="600" data-aos="fade-down" data-aos-delay="1200">Startup 3</div>
+                <div class="col-lg-3 logo" data-aos-duration="600" data-aos="fade-down" data-aos-delay="1200">Todo</div>
                 <div class="col-lg-6 text-center" data-aos-duration="600" data-aos="fade-down" data-aos-delay="900">
                     <a href="#" class="link color-heading mx-15">Home</a>
                     <a href="#" class="link color-heading mx-15">Features</a>
@@ -77,21 +77,20 @@
     </nav>
 
     <div class="container">
-        <div class="mb-3 logo d-block d-xl-none text-center logo_mobile">Startup 3</div>
-        <h1 class="big text-center" data-aos-duration="600" data-aos="fade-down" data-aos-delay="0">Startup Framework</h1>
+        <div class="mb-3 logo d-block d-xl-none text-center logo_mobile">Todo</div>
+        <h1 class="big text-center" data-aos-duration="600" data-aos="fade-down" data-aos-delay="0">"Just Do It"</h1>
         <div class="mw-600 mx-auto mt-30 f-22 color-heading text-center text-adaptive" data-aos-duration="600" data-aos="fade-down" data-aos-delay="300">
-            We made it so beautiful and simple. It combines landings, pages, blogs and shop screens. It is definitely the tool you need in your collection!		</div>
-
+           	 해야 할 일을 지금 바로 등록하세요!
+        </div>
         <div class="mt-80 text-center buttons" data-aos-duration="600" data-aos="fade-down" data-aos-delay="600">
             <div><a href="#todo_form" class="btn lg action-1">등록</a></div>
-<!--            <div><a href="#" class="mt-15 link action-1 f-18 medium">Learn More</a></div>-->
         </div>
     </div>
 </header>
 <!-- Testimonial 1 -->
 
 <section class="pt-80 pb-80 bg-light testimonial_1">
-    <div class="container px-xl-0">
+    <div th:each="todo : ${todolist}" class="container px-xl-0">
         <div class="row justify-content-center">
             <div class="col-xl-10 col-lg-11" data-aos-duration="600" data-aos="fade-down" data-aos-delay="0">
                 <div class="hr bg-gray h-2"></div>
@@ -103,13 +102,8 @@
                 <i class="fas fa-quote-left f-36 color-gray"></i>
             </div>
             <div class="col-xl-7 col-lg-8 col-sm-10">
-                <div class="pt-10 f-22 text-adaptive">
-                    The most important part of the Startup Framework is the
-                    samples. The samples form a set of 25 usable pages you can
-                    use as is or you can add new blocks from UI Kit. 				</div>
-                <div class="mt-20 d-flex align-items-center author_info">
-                    <img src="i/testimonial_1_img.jpg" srcset="i/testimonial_1_img@2x.jpg 2x" class="w-60 h-60 radius_full" alt="" />
-                    <div class="ml-15 color-heading f-14 semibold text-uppercase sp-20">Jessey Kirk, designmodo</div>
+                <!-- <div th:text="|  *{todo.registrationDate}|" class="pt-10 f-22 text-adaptive"> -->
+                	<span th:text="*{todo.work}" /> | <span th:text="*{todo.registrationDate}|" />
                 </div>
             </div>
         </div>
@@ -127,7 +121,7 @@
         <div class="row text-center text-sm-left">
             <div class="col-lg-5 col-md-6 col-sm-7">
                 <form class="pt-105 pb-100">
-                    <h2 class="mb-45 small" data-aos-duration="600" data-aos="fade-down" data-aos-delay="0">Sign Up to Discover Startup Features</h2>
+                    <h2 class="mb-45 small" data-aos-duration="600" data-aos="fade-down" data-aos-delay="0">New Todo</h2>
                     <div data-aos-duration="600" data-aos="fade-down" data-aos-delay="0">
                         <div class="mb-10 f-14 semibold text-uppercase sp-20">할 일</div>
                         <input type="text" name="word" class="mb-25 w-full input lg border-gray focus-action-1 color-heading placeholder-gray text-center text-sm-left"  />
@@ -209,14 +203,12 @@
 
 <script>
     $("document").ready(function() {
-        $("#btn_reg").click(function() {
-            alert("hi");
-        });
-
-        function addWork() {
-            alert("아직 준비 중입니다.");
-        };
+        $("#btn_reg").click(addWork);
     });
+    
+    function addWork() {
+        alert("아직 준비 중입니다.");
+    };
 
 </script>
 
